--- a/Lecture09/lecture09.Rmd
+++ b/Lecture09/lecture09.Rmd
@@ -2,7 +2,7 @@
 title: "class09"
 author: "Claudia Medrano"
 date: "10/30/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
