--- a/Lecture6_10.18.19/class6.Rmd
+++ b/Lecture6_10.18.19/class6.Rmd
@@ -2,7 +2,7 @@
 title: "Class 6 practice"
 author: "Claudia Medrano"
 date: "10/18/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r}
